# mini-engine

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: component.h  componentHandle.h  componentManager.h  componentMask.h  engine.h  entity.h  entityHandle.h  entityManager.h  entityMap.h  system.h  world.h
src/: component.cpp  componentMask.cpp  entityManager.cpp  system.cpp  world.cpp
